src/api/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: mcr.microsoft.com/mcr/hello-world
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /v1/liveness
              port: 80
            initialDelaySeconds: 5
            failureThreshold: 1
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /v1/startup
              port: 80
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /v1/readiness
              port: 80
            initialDelaySeconds: 5
            failureThreshold: 1
            periodSeconds: 10
